--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-rate-prof",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,9 +10,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
+    "@pinecone-database/pinecone": "^3.0.1",
+    "next": "14.2.6",
+    "openai": "^4.56.0",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.6"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
